vendor/thiserror-1.0.24/tests/ui/duplicate-struct-source.stderr
error: duplicate #[source] attribute
 --> $DIR/duplicate-struct-source.rs:7:5
  |
7 |     #[source]
  |     ^^^^^^^^^
