vendor/thiserror-1.0.24/tests/ui/duplicate-struct-source.rs
use thiserror::Error;

#[derive(Error, Debug)]
pub struct ErrorStruct {
    #[source]
    a: std::io::Error,
    #[source]
    b: anyhow::Error,
}

fn main() {}
